--- a/src/app/shared/components/auth/auth-carousel.html
+++ b/src/app/shared/components/auth/auth-carousel.html
@@ -27,7 +27,7 @@
                 <div class="form-group">
                     <label>Correo electrónico:</label>
                     <div class="input-wrapper">
-                        <input type="email" formControlName="email" placeholder="ejemplo@optica.com" [class.invalid]="loginForm.get('email')?.invalid && loginForm.get('email')?.touched">
+                        <input type="email" formControlName="email" placeholder="ejemplo@optica.com" [class.invalid]="loginForm.get('email')?.invalid && loginForm.get('email')?.touched" appEnterNext>
                         <div class="warning-icon" *ngIf="loginForm.get('email')?.touched && loginForm.get('email')?.invalid">
                             <span class="tooltip">
                                 <ng-container *ngIf="loginForm.get('email')?.hasError('required')">Correo requerido.<br></ng-container>
@@ -46,7 +46,7 @@
                 <div class="form-group">
                     <label>Contraseña:</label>
                     <div class="input-wrapper">
-                        <input [type]="showPassword() ? 'text' : 'password'" formControlName="password" placeholder="********" [class.invalid]="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
+                        <input [type]="showPassword() ? 'text' : 'password'" formControlName="password" placeholder="********" [class.invalid]="loginForm.get('password')?.invalid && loginForm.get('password')?.touched" appEnterNext>
                         <button type="button" class="toggle-password" (click)="togglePasswordVisibility('login')" tabindex="-1">
                             <svg *ngIf="!showPassword()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/>
@@ -81,7 +81,7 @@
 
             <div class="auth-links">
                 <a (click)="goTo(2)">¿No tienes cuenta? Regístrate</a>
-                <a (click)="goTo(3)">¿Olvidaste tu contraseña?</a>
+                <a routerLink="/forgot-password" style="cursor: pointer;">¿Olvidaste tu contraseña?</a>
             </div>
         </div>
 
@@ -95,12 +95,13 @@
                 <div class="form-group">
                     <label>Cédula:</label>
                     <div class="input-wrapper">
-                        <input type="text" formControlName="cedula" maxlength="10" placeholder="1234567890">
-                        <div class="warning-icon" *ngIf="registerForm.get('cedula')?.touched && registerForm.get('cedula')?.invalid">
+                        <input type="text" formControlName="cedula" maxlength="10" placeholder="1234567890" appEnterNext>
+                        <div class="warning-icon" *ngIf="registerForm.get('cedula')?.invalid && (registerForm.get('cedula')?.touched || registerForm.get('cedula')?.dirty || registerForm.get('cedula')?.hasError('cedulaTomada'))">
                             <span class="tooltip">
                                 <ng-container *ngIf="registerForm.get('cedula')?.hasError('required')">Cédula requerida.<br></ng-container>
                                 <ng-container *ngIf="registerForm.get('cedula')?.hasError('maxlength')">Máximo 10 dígitos.<br></ng-container>
-                                <ng-container *ngIf="registerForm.get('cedula')?.hasError('pattern')">Solo números permitidos.</ng-container>
+                                <ng-container *ngIf="registerForm.get('cedula')?.hasError('pattern')">Solo números permitidos.<br></ng-container>
+                                <ng-container *ngIf="registerForm.get('cedula')?.hasError('cedulaTomada')">Esta cédula ya está registrada.</ng-container>
                             </span>
                             <svg class="lucide lucide-message-circle-warning" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path>
@@ -115,7 +116,7 @@
                 <div class="form-group">
                     <label>Nombre:</label>
                     <div class="input-wrapper">
-                        <input type="text" formControlName="nombre" placeholder="Juan">
+                        <input type="text" formControlName="nombre" placeholder="Juan" appEnterNext>
                         <div class="warning-icon" *ngIf="registerForm.get('nombre')?.touched && registerForm.get('nombre')?.invalid">
                             <span class="tooltip">
                                 <ng-container *ngIf="registerForm.get('nombre')?.hasError('required')">Nombre requerido.<br></ng-container>
@@ -135,7 +136,7 @@
                 <div class="form-group">
                     <label>Apellido:</label>
                     <div class="input-wrapper">
-                        <input type="text" formControlName="apellido" placeholder="Pérez">
+                        <input type="text" formControlName="apellido" placeholder="Pérez" appEnterNext>
                         <div class="warning-icon" *ngIf="registerForm.get('apellido')?.touched && registerForm.get('apellido')?.invalid">
                             <span class="tooltip">
                                 <ng-container *ngIf="registerForm.get('apellido')?.hasError('required')">Apellido requerido.<br></ng-container>
@@ -155,7 +156,7 @@
                 <div class="form-group">
                     <label>Fecha de nacimiento:</label>
                     <div class="input-wrapper">
-                        <input type="date" formControlName="fechaNacimiento">
+                        <input type="date" formControlName="fechaNacimiento" appEnterNext>
                         <div class="warning-icon" *ngIf="registerForm.get('fechaNacimiento')?.touched && registerForm.get('fechaNacimiento')?.invalid">
                             <span class="tooltip">
                                 <ng-container *ngIf="registerForm.get('fechaNacimiento')?.hasError('required')">Fecha requerida.<br></ng-container>
@@ -174,11 +175,12 @@
                 <div class="form-group">
                     <label>Correo:</label>
                     <div class="input-wrapper">
-                        <input type="email" formControlName="correo" placeholder="ejemplo@optica.com">
-                        <div class="warning-icon" *ngIf="registerForm.get('correo')?.touched && registerForm.get('correo')?.invalid">
+                        <input type="email" formControlName="correo" placeholder="ejemplo@optica.com" appEnterNext>
+                        <div class="warning-icon" *ngIf="registerForm.get('correo')?.invalid && (registerForm.get('correo')?.touched || registerForm.get('correo')?.dirty || registerForm.get('correo')?.hasError('emailTomado'))">
                             <span class="tooltip">
                                 <ng-container *ngIf="registerForm.get('correo')?.hasError('required')">Correo requerido.<br></ng-container>
-                                <ng-container *ngIf="registerForm.get('correo')?.hasError('email')">Formato de correo inválido.</ng-container>
+                                <ng-container *ngIf="registerForm.get('correo')?.hasError('email')">Formato de correo inválido.<br></ng-container>
+                                <ng-container *ngIf="registerForm.get('correo')?.hasError('emailTomado')">Este correo ya está registrado.</ng-container>
                             </span>
                             <svg class="lucide lucide-message-circle-warning" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M7.9 20A9 9 0 1 0 4 16.1L2 22Z"></path>
@@ -193,7 +195,7 @@
                 <div class="form-group">
                     <label>Contraseña:</label>
                     <div class="input-wrapper">
-                        <input [type]="showRegisterPassword() ? 'text' : 'password'" formControlName="password" placeholder="********">
+                        <input [type]="showRegisterPassword() ? 'text' : 'password'" formControlName="password" placeholder="********" appEnterNext>
                         <button type="button" class="toggle-password" (click)="togglePasswordVisibility('register')" tabindex="-1">
                             <svg *ngIf="!showRegisterPassword()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/>
@@ -225,7 +227,7 @@
                 <div class="form-group">
                     <label>Confirmar contraseña:</label>
                     <div class="input-wrapper">
-                        <input [type]="showConfirmPassword() ? 'text' : 'password'" formControlName="confirmPassword" placeholder="********">
+                        <input [type]="showConfirmPassword() ? 'text' : 'password'" formControlName="confirmPassword" placeholder="********" appEnterNext>
                         <button type="button" class="toggle-password" (click)="togglePasswordVisibility('confirm')" tabindex="-1">
                             <svg *ngIf="!showConfirmPassword()" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M2 12s3-7 10-7 10 7 10 7-3 7-10 7-10-7-10-7Z"/>
@@ -272,7 +274,7 @@
                 <div class="form-group">
                     <label>Correo electrónico:</label>
                     <div class="input-wrapper">
-                        <input type="email" formControlName="email" placeholder="ejemplo@optica.com" [class.invalid]="forgotForm.get('email')?.invalid && forgotForm.get('email')?.touched">
+                        <input type="email" formControlName="email" placeholder="ejemplo@optica.com" [class.invalid]="forgotForm.get('email')?.invalid && forgotForm.get('email')?.touched" appEnterNext>
                         <div class="warning-icon" *ngIf="forgotForm.get('email')?.touched && forgotForm.get('email')?.invalid">
                             <span class="tooltip">
                                 <ng-container *ngIf="forgotForm.get('email')?.hasError('required')">Correo requerido.<br></ng-container>
