--- a/src/app/modules/ventas/crear-venta/crear-venta.css
+++ b/src/app/modules/ventas/crear-venta/crear-venta.css
@@ -679,8 +679,10 @@
 .ticket {
     display: none;
     font-family: ui-monospace, monospace;
-    font-size: 11px;
-    line-height: 1.25;
+    font-size: 12.5px;
+    /* ⬅️ MÁS GRANDE */
+    line-height: 1.35;
+    /* ⬅️ más aire */
     color: #000;
     width: 80mm;
     background: #fff;
@@ -740,8 +742,9 @@
 }
 
 .t-small {
-    font-size: 10px;
-    opacity: 0.95;
+    font-size: 11.5px;
+    opacity: 1;
+    /* sin transparencia */
 }
 
 
